--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
   <body>
     <header>
       <h1>Random Quotes</h1>
-      <button id="load-quote" class="load-quote">Show another quote</button>
+      <button id="load-quote" class="load-quote">
+        Show another quote (<span class="timer">5</span>)
+      </button>
     </header>
 
     <div class="container">
       <div id="quote-box" class="quote-box">
-        <p class="quote">
+        <div class="quote">
           Every great developer you know got there by solving problems they were
           unqualified to solve until they actually did it.
-        </p>
+        </div>
         <p class="source">
           <span class="source-name">Patrick McKenzie</span
           ><span class="citation">Twitter</span><span class="year">2016</span>
         </p>
+        <div class="category">life</div>
       </div>
     </div>
 
