--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <div class="container">
       <div id="quote-box" class="quote-box">
-        <div class="quote">
+        <p class="quote">
           Every great developer you know got there by solving problems they were
           unqualified to solve until they actually did it.
-        </div>
+        </p>
         <p class="source">
           <span class="source-name">Patrick McKenzie</span
           ><span class="citation">Twitter</span><span class="year">2016</span>
